# torch-hook-utils

./: .pdm-python  LICENSE  README.md  example.py  pyproject.toml
hook_utils/: __init__.py  input_output_hooks.py  layers.py  maxpool_hooks.py  maxpool_hooks_test.py  types.py
src/torch_hook_utils/: __init__.py  input_output_hooks.py  layers.py  maxpool_hooks.py  types.py
tests/: maxpool_hooks_test.py  replace_inputs_test.py
